[tool.poetry]
name = "torch-hypothesis"
version = "0.1.1"
description = "Generate pytorch data structures for the hypothesis testing library."
authors = ["Jan Fryeberg <jan.freyberg@elementai.com>"]
homepage = "https://github.com/janfreyberg/torch-hypothesis"

[tool.poetry.dependencies]
python = "^3.7"
torch = "^1.1"
torchvision = "^0.3.0"
hypothesis = "^4.24"

[tool.poetry.dev-dependencies]
black = {version = "^18.3-alpha.0",allows-prereleases = true}

[tool.black]
line-length = 79

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

